2007-01-31  Jason Rumney  <jasonr@gnu.org>

	* files.el (magic-mode-alist): Use image-mode-maybe rather than
	image-mode.

	* image-mode.el (image-mode-maybe): Prevent magic-mode-alist from
	interfering with attempt to set major mode from modified
	auto-mode-alist.

2007-01-31  Juanma Barranquero  <lekktu@gmail.com>

	* faces.el (color-values): Doc fix.
	(face-differs-from-default-p): Don't check :foreground twice.

2007-01-31  J.D. Smith  <jdsmith@as.arizona.edu>

	* comint.el (comint-mode): Prevent non-keyword fontification by default.

2007-01-31  Kenichi Handa  <handa@m17n.org>

	* international/quail.el (quail-store-decode-map-key): Store a
	translated character too.
	(quail-char-equal-p): New function.
	(quail-find-key1): Check character equality by quail-char-equal-p.
	(quail-decode-map-generated): New variable.
	(quail-find-key): Check quail-decode-map-generated and re-generate
	a decode map if necessary.

2007-01-30  Richard Stallman  <rms@gnu.org>

	* tutorial.el (tutorial--detailed-help): Make the list of
	changed keys look nicer.

2007-01-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-delete-1): New function.
	(gdb-var-delete): Use it.
	(gdb-var-update-handler-1): Handle value "invalid" for MI field
	`in_scope'.

2007-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (get-free-disk-space): Return nil for remote directories.

	* net/ange-ftp.el (ange-ftp-ls): In case of wildcards, use "ls"
	instead of "dir".

2007-01-30  Chong Yidong  <cyd@stupidchicken.com>

	* type-break.el (type-break-catch-up-event): New function.
	(type-break-demo-hanoi, type-break-demo-life)
	(type-break-demo-boring): Use it.

	* image-mode.el (image-mode): Don't automatically view as image.
	(image-toggle-display): Add `disabled' property.

2007-01-29  Juanma Barranquero  <lekktu@gmail.com>

	* isearchb.el (isearchb-iswitchb):
	* ps-print.el (ps-build-face-reference):
	* emacs-lisp/shadow.el (list-load-path-shadows):